--- a/.github/workflows/delivery_stable_ci.yaml
+++ b/.github/workflows/delivery_stable_ci.yaml
@@ -716,6 +716,11 @@ jobs:
 
             export OPENRADIOSS_BIN_ARCHIVE="${{ env.OPENRADIOSS_MAINDIR_NAME }}_${os}.zip"
 
+            echo "in todeliver for ${os}"
+            ls -l todeliver
+            echo "----"
+            ls -l todeliver/${os}
+            echo "----"            
             cd todeliver/${os}
             zip -r ../$OPENRADIOSS_BIN_ARCHIVE ${{ env.OPENRADIOSS_MAINDIR_NAME }}
             cd ..
