--- a/.github/workflows/delivery_stable_ci.yaml
+++ b/.github/workflows/delivery_stable_ci.yaml
@@ -722,7 +722,7 @@ jobs:
             ls -l todeliver/${os}
             echo "----"            
             cd todeliver/${os}
-            zip -r ../$OPENRADIOSS_BIN_ARCHIVE ${{ env.OPENRADIOSS_MAINDIR_NAME }}
+            echo zip -r ../$OPENRADIOSS_BIN_ARCHIVE ${{ env.OPENRADIOSS_MAINDIR_NAME }}
             cd ..
             rm -rf ${os}
             cd ..
